--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Level1.Level1
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase_C
@@ -20,4 +18,8 @@ r.DefaultFeature.AutoExposure=False
 r.UsePreExposure=True
 r.DefaultFeature.AutoExposure.Bias=0.000000
 r.DefaultFeature.AutoExposure.Method=2
+
+[URL]
+GameName=ScrimbloDemo
+
 
